<ScrollView 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:fillViewport="true">

	<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:background="@layout/gradient"
		    tools:context=".AddContactActivity" >
	
	    <TextView
	        android:id="@+id/add_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:text="@string/add_title" />
	    
	    <TextView
		        android:id="@+id/name_label"
		        android:paddingTop="25dp"
		        android:paddingLeft="10dp"
		        android:textSize="18sp"
		        android:textColor="#cccccc"
		        android:textStyle="bold" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/add_title"
		        android:gravity="center"
		        android:text="@string/name_label" />
		    
		<EditText
			    android:id="@+id/name"
			    android:paddingTop="8dp"
			    android:textColor="#FF0000"
			    android:layout_below="@id/name_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:hint="@string/name_hint" />
		
		<TextView
		        android:id="@+id/number_label"
		        android:paddingTop="25dp"
		        android:paddingLeft="10dp"
		        android:textSize="18sp"
		        android:textColor="#cccccc"
		        android:textStyle="bold" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/name"
		        android:gravity="center"
		        android:text="@string/number_label" />
		    
		<EditText
			    android:id="@+id/number"
			    android:paddingTop="8dp"
			    android:textColor="#0000FF"
			    android:layout_below="@id/number_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:inputType="phone"
			    android:hint="@string/number_hint" />
		
	    <TextView
		        android:id="@+id/email_label"
		        android:paddingTop="25dp"
		        android:paddingLeft="10dp"
		        android:textSize="18sp"
		        android:textColor="#cccccc"
		        android:textStyle="bold" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/number"
		        android:gravity="center"
		        android:text="@string/email_label" />
		    
		<EditText
			    android:id="@+id/email"
			    android:paddingTop="8dp"
			    android:textColor="#FF00FF"
			    android:layout_below="@id/email_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:inputType="textEmailAddress"
			    android:hint="@string/email_hint" />
		
		<TextView
		        android:id="@+id/address_label"
		        android:paddingTop="25dp"
		        android:paddingLeft="10dp"
		        android:textSize="18sp"
		        android:textColor="#cccccc"
		        android:textStyle="bold" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/email"
		        android:gravity="center"
		        android:text="@string/address_label" />
		    
		<EditText
			    android:id="@+id/address"
			    android:paddingTop="8dp"
			    android:textColor="#00FF00"
			    android:layout_below="@id/address_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:hint="@string/address_hint" />
		
		<TextView
		        android:id="@+id/dob_label"
		        android:paddingTop="25dp"
		        android:paddingLeft="10dp"
		        android:textSize="18sp"
		        android:textColor="#cccccc"
		        android:textStyle="bold" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/address"
		        android:gravity="center"
		        android:text="@string/dob_label" />
		    
		<EditText
			    android:id="@+id/dob"
			    android:paddingTop="8dp"
			    android:textColor="#FFFFFF"
			    android:layout_below="@id/dob_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:inputType="date"
			    android:maxLength="10"
			    android:hint="@string/dob_hint" />
		
		<ImageButton
	            android:id="@+id/btn_add"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="35dp"
	            android:paddingLeft = "20dp"
	            android:background="@null"
	            android:layout_alignParentLeft="true"
				android:layout_below="@id/dob"
	            android:scaleType="centerInside"
	            android:src="@drawable/ic_btn_add" />

		<ImageButton
	            android:id="@+id/btn_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_below="@id/dob"
	            android:paddingTop="35dp"
	            android:paddingRight = "20dp"
	            android:background="@null"
	            android:scaleType="centerInside"
	            android:src="@drawable/ic_btn_cancel" />
		
	
	</RelativeLayout>

</ScrollView>
