<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
>

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:background="@layout/gradient"
	    tools:context=".ViewContact" >
	  
    <TextView
	        android:id="@+id/titleView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_centerHorizontal="true"
	        android:textSize = "25sp"
	        android:textColor="#ffffff"
	        android:padding="10dp"
	        android:layout_gravity="center"
	        android:textStyle="bold"
	        android:text="@string/singleTitle" />
    
	<TextView
	        android:id="@+id/contactIntro"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#ffffff"
	        android:padding="10dp"
	        android:layout_below="@+id/titleView"
	        android:layout_gravity="center"
	        android:text="@string/singleIntroEdit" />
	
	<TextView
	        android:id="@+id/lblName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:layout_below="@id/contactIntro"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:padding="5dp"
	        android:text="@string/name_label" />
	
	<EditText
		    android:id="@+id/name"
		    android:padding="5dp"
		    android:textColor="#FF0000"
		    android:layout_below="@id/lblName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

	<TextView
	        android:id="@+id/lblNumber"
	        android:textStyle="bold"
	        android:layout_below="@id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:padding="5dp"
	        android:text="@string/number_label" />
	
	<EditText
		    android:id="@+id/number"
		    android:padding="5dp"
		    android:textColor="#0000FF"
		    android:layout_below="@id/lblNumber"
			android:inputType="phone"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />		
		
	<TextView
	        android:id="@+id/lblEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:layout_below="@id/number"
	        android:gravity="center"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:padding="5dp"
	        android:text="@string/email_label" />
	
	<EditText
		    android:id="@+id/email"
		    android:padding="5dp"
		    android:inputType="textEmailAddress"
		    android:textColor="#FF00FF"
		    android:layout_below="@id/lblEmail"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />		
		
	<TextView
	        android:id="@+id/lblAddress"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_below="@id/email"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:padding="5dp"
	        android:text="@string/address_label" />
	
	<EditText
		    android:id="@+id/address"
		    android:padding="5dp"
		    android:textColor="#00FF00"
		    android:layout_below="@id/lblAddress"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>		
		
	<TextView
	        android:id="@+id/lblAge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_below="@id/address"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:padding="5dp"
	        android:text="@string/dob_label" />
	
	<EditText
		    android:id="@+id/age"
		    android:padding="5dp"
		    android:paddingBottom="10dp"
		    android:textColor="#FFFFFF"
		    android:layout_below="@id/lblAge"
		    android:maxLength="10"
		    android:inputType="date"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	  
	<ImageButton
	            android:id="@+id/btn_save"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="20dp"
	            android:paddingLeft = "20dp"
	            android:background="@null"
	            android:scaleType="centerInside"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/age"
	            android:paddingBottom="20dp"
	            android:src="@drawable/ic_btn_save"/>

		<ImageButton
	            android:id="@+id/btn_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="20dp"
	            android:paddingRight = "20dp"
	            android:background="@null"
	            android:paddingBottom="20dp"
	            android:layout_below="@+id/age"
	            android:layout_alignParentRight="true"
	            android:scaleType="centerInside"
	            android:src="@drawable/ic_btn_back"/>
		</RelativeLayout>
</ScrollView>
